# emergia

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: compiler-flags.cmake
demo/: CMakeLists.txt  main.cpp
src/memory/: bucket.cpp  bucket.cppm  bucket.hpp  miscs.hpp  pool.hpp
test/: CMakeLists.txt
test/memory/: allocators-test.cpp
